[gd_scene load_steps=13 format=3 uid="uid://bydgigp3m5t3d"]

[ext_resource type="Script" path="res://Misc/AutoLoads/Layers/Layers.gd" id="1"]
[ext_resource type="Script" path="res://Misc/AutoLoads/Layers/PauseMenu/PauseMenu.gd" id="2"]
[ext_resource type="Script" path="res://Misc/AutoLoads/Layers/Inventory/Inventory.gd" id="4"]
[ext_resource type="PackedScene" path="res://Misc/AutoLoads/Layers/Cinematics/Panels/Panels.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://nuoj1vrqrghc" path="res://Misc/AutoLoads/Layers/Cinematics/Bars/CinematicBars.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://bkkrqrj4fxyul" path="res://Misc/AutoLoads/Layers/Cinematics/Transitions/Transitions.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://b6qqqf3agipt1" path="res://Misc/AutoLoads/Layers/Cinematics/Canvases/Canvases.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://wym2l50h7ugg" path="res://Misc/AutoLoads/Layers/Hud/Hud.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://cn1suio6g5q8u" path="res://Misc/AutoLoads/Layers/DialogueBox/DialogueBox.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://jccue731r3ju" path="res://Misc/AutoLoads/Layers/Sky/Sky.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://bpkusesk060wd" path="res://Misc/AutoLoads/Layers/InteractionHints/InteractionHints.tscn" id="13"]
[ext_resource type="Script" path="res://Misc/AutoLoads/Layers/ToDoList/ToDoList.gd" id="14"]

[node name="Layers" type="Node2D"]
script = ExtResource("1")

[node name="LayerN100" type="CanvasLayer" parent="."]
layer = -100

[node name="Sky" parent="LayerN100" instance=ExtResource("12")]

[node name="Layer5" type="CanvasLayer" parent="."]
layer = 5

[node name="HUD" parent="Layer5" instance=ExtResource("10")]

[node name="InteractionHints" parent="Layer5" instance=ExtResource("13")]

[node name="Inventory" type="Node2D" parent="Layer5" groups=["inventory"]]
script = ExtResource("4")

[node name="ToDoList" type="Node2D" parent="Layer5" groups=["ToDoList", "updateFree"]]
script = ExtResource("14")

[node name="CinematicBars" parent="Layer5" instance=ExtResource("7")]

[node name="DialogueBox" parent="Layer5" instance=ExtResource("11")]
position = Vector2(256, 514)

[node name="Layer10" type="CanvasLayer" parent="."]
layer = 10

[node name="Panels" parent="Layer10" instance=ExtResource("6")]

[node name="Canvases" parent="Layer10" instance=ExtResource("9")]
process_mode = 3
visible = false
z_index = 15

[node name="Layer15" type="CanvasLayer" parent="."]
layer = 15

[node name="PauseMenu" type="Node2D" parent="Layer15" groups=["pauseMenu"]]
process_mode = 3
script = ExtResource("2")

[node name="Transitions" parent="Layer15" instance=ExtResource("8")]
visible = false
